--- a/exemplo01.html
+++ b/exemplo01.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="pt-br">
-<head>
-    <meta charset="utf-8">
-    <title>exemplo 01</title>
-</head>
-<body>
-<h1>Primeiro exemplo com o Git</h1>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>exemplo 01</title>
+    </head>
+    <body>
+        <h1>Primeiro exemplo com o Git</h1>
+
+        <p>um texto qualquer</p>
+    </body>
 </html>
